==> Paciente8159/uCNC/uCNC/src/hal/mcus/esp32/mcu_esp32.c <==
#include "../../../cnc.h"
#include "esp_timer.h"
#include "esp_task_wdt.h"
#include "esp_ipc.h"
#include "driver/uart.h"
#include "driver/timer.h"
#include "soc/i2s_struct.h"
#include "driver/i2c.h"
#include "hal/spi_types.h"
#include "driver/spi_master.h"
#include <string.h>
#include <stdbool.h>
#include <stdint.h>
#include <math.h>
#include <nvs.h>
#include <esp_partition.h>
#define FLASH_EEPROM_SIZE 1024
#include "driver/i2s.h"

IRAM_ATTR void mcu_itp_isr(void *arg)
{
	static bool resetstep = false;

	if (!resetstep)
		mcu_step_cb();
	else
		mcu_step_reset_cb();
	resetstep = !resetstep;

	timer_group_clr_intr_status_in_isr(ITP_TIMER_TG, ITP_TIMER_IDX);
	/* After the alarm has been triggered
	  we need enable it again, so it is triggered the next time */
	timer_group_enable_alarm_in_isr(ITP_TIMER_TG, ITP_TIMER_IDX);
}

void mcu_init(void)
{
#if (defined(LIMIT_X_ISR) || defined(LIMIT_Y_ISR) || defined(LIMIT_Z_ISR) || defined(LIMIT_X2_ISR) || defined(LIMIT_Y2_ISR) || defined(LIMIT_Z2_ISR) || defined(LIMIT_A_ISR) || defined(LIMIT_B_ISR) || defined(LIMIT_C_ISR) || defined(PROBE_ISR) || defined(ESTOP_ISR) || defined(SAFETY_DOOR_ISR) || defined(FHOLD_ISR) || defined(CS_RES_ISR) || defined(DIN0_ISR) || defined(DIN1_ISR) || defined(DIN2_ISR) || defined(DIN3_ISR) || defined(DIN4_ISR) || defined(DIN5_ISR) || defined(DIN6_ISR) || defined(DIN7_ISR))
	gpio_install_isr_service(0);
#endif

	mcu_io_init();

	// starts EEPROM before UART to enable WiFi and BT settings
#ifndef RAM_ONLY_SETTINGS
	// esp32_eeprom_init(FLASH_EEPROM_SIZE); // 1K Emulated EEPROM

	// starts nvs
	mcu_eeprom.size = 0;
	memset(mcu_eeprom.data, 0, FLASH_EEPROM_SIZE);
	if (nvs_open("eeprom", NVS_READWRITE, &mcu_eeprom.nvs_handle) == ESP_OK)
	{
		// determines the maximum sector size of NVS that can be read/write
		nvs_get_blob(mcu_eeprom.nvs_handle, "eeprom", NULL, &mcu_eeprom.size);
		if (FLASH_EEPROM_SIZE > mcu_eeprom.size)
		{
			log_e("eeprom does not have enough space");
			mcu_eeprom.size = 0;
		}

		nvs_get_blob(mcu_eeprom.nvs_handle, "eeprom", mcu_eeprom.data, &mcu_eeprom.size);
	}
	else
	{
		log_e("eeprom failed to open");
	}
#endif

#ifdef MCU_HAS_UART
	// initialize UART
	const uart_config_t uartconfig = {
		.baud_rate = BAUDRATE,
		.data_bits = UART_DATA_8_BITS,
		.parity = UART_PARITY_DISABLE,
		.stop_bits = UART_STOP_BITS_1,
		.flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
		.source_clk = UART_SCLK_APB};
	// We won't use a buffer for sending data.
	uart_param_config(COM_PORT, &uartconfig);
	uart_set_pin(COM_PORT, TX_BIT, RX_BIT, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
#endif

#ifdef MCU_HAS_UART2
	// initialize UART
	const uart_config_t uart2config = {
		.baud_rate = BAUDRATE2,
		.data_bits = UART_DATA_8_BITS,
		.parity = UART_PARITY_DISABLE,
		.stop_bits = UART_STOP_BITS_1,
		.flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
		.source_clk = UART_SCLK_APB};
	// We won't use a buffer for sending data.
	uart_param_config(COM2_PORT, &uart2config);
	uart_set_pin(COM2_PORT, TX2_BIT, RX2_BIT, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
#endif

#ifdef IC74HC595_HAS_PWMS
	// initialize PWM timer
	/* Select and initialize basic parameters of the timer */
	timer_config_t pwmconfig = {
		.divider = 2,
		.counter_dir = TIMER_COUNT_UP,
		.counter_en = TIMER_PAUSE,
		.alarm_en = TIMER_ALARM_EN,
		.auto_reload = true,
	}; // default clock source is APB
	timer_init(PWM_TIMER_TG, PWM_TIMER_IDX, &pwmconfig);

	/* Timer's counter will initially start from value below.
	   Also, if auto_reload is set, this value will be automatically reload on alarm */
	timer_set_counter_value(PWM_TIMER_TG, PWM_TIMER_IDX, 0x00000000ULL);
	/* Configure the alarm value and the interrupt on alarm. */
	timer_set_alarm_value(PWM_TIMER_TG, PWM_TIMER_IDX, (uint64_t)157);
	timer_enable_intr(PWM_TIMER_TG, PWM_TIMER_IDX);
#endif

	// inititialize ITP timer
	timer_config_t itpconfig = {0};
	itpconfig.divider = getApbFrequency() / 1000000UL; // 1us per pulse
	itpconfig.counter_dir = TIMER_COUNT_UP;
	itpconfig.counter_en = TIMER_PAUSE;
	itpconfig.alarm_en = TIMER_ALARM_EN;
	itpconfig.auto_reload = true;
	timer_init(ITP_TIMER_TG, ITP_TIMER_IDX, &itpconfig);

	// initialize rtc timer (currently on core 1)
	// moved to core 0
	xTaskCreatePinnedToCore(mcu_rtc_task, "rtcTask", 1024, NULL, 7, NULL, 0 /*CONFIG_ARDUINO_RUNNING_CORE*/);

	// launches isr tasks that will run on core 0
	// currently it's running PWM and UART on core 0
	// Arduino Bluetooth also runs on core 0
	// Arduino WiFi ???
	esp_ipc_call_blocking(0, mcu_core0_tasks_init, NULL);

#ifdef MCU_HAS_SPI
	spi_bus_config_t spiconf = {
		.miso_io_num = SPI_SDI_BIT,
		.mosi_io_num = SPI_SDO_BIT,
		.sclk_io_num = SPI_CLK_BIT,
		.quadwp_io_num = -1,
		.quadhd_io_num = -1,
		.data4_io_num = -1,
		.data5_io_num = -1,
		.data6_io_num = -1,
		.data7_io_num = -1,
		.max_transfer_sz = SOC_SPI_MAXIMUM_BUFFER_SIZE,
		.flags = 0,
		.intr_flags = 0};
	// Initialize the SPI bus
	spi_bus_initialize(SPI_PORT, &spiconf, SPI_DMA_DISABLED);
	mcu_spi_config(SPI_MODE, SPI_FREQ);
#endif

#ifdef MCU_HAS_I2C
	i2c_config_t i2cconf = {
		.mode = I2C_MODE_MASTER,
		.sda_io_num = I2C_DATA_BIT, // select GPIO specific to your project
		.sda_pullup_en = GPIO_PULLUP_ENABLE,
		.scl_io_num = I2C_CLK_BIT, // select GPIO specific to your project
		.scl_pullup_en = GPIO_PULLUP_ENABLE,
		.master.clk_speed = I2C_FREQ, // select frequency specific to your project
		.clk_flags = 0,				  // you can use I2C_CLKK_SRC_FLAG_* flags to choose i2c source clock here
	};
	i2c_param_config((i2c_port_t)I2C_PORT, &i2cconf);
	i2c_driver_install(I2C_PORT, I2C_MODE_MASTER, 0, 0, 0);
#endif

#ifdef IC74HC595_CUSTOM_SHIFT_IO
	i2s_config_t i2s_config = {
		.mode = I2S_MODE_MASTER | I2S_MODE_TX, // Only TX
		.sample_rate = 156250UL,			   // 312500KHz * 32bit * 2 channels = 20MHz
		.bits_per_sample = I2S_BITS_PER_SAMPLE_32BIT,
		.channel_format = I2S_CHANNEL_FMT_ONLY_LEFT, // 1-channels
		.communication_format = I2S_COMM_FORMAT_STAND_I2S | I2S_COMM_FORMAT_STAND_MSB,
		.dma_buf_count = 2,
		.dma_buf_len = 8,
		.use_apll = false,
		.intr_alloc_flags = ESP_INTR_FLAG_LEVEL1 // Interrupt level 1
	};

	i2s_pin_config_t pin_config = {
		.bck_io_num = IC74HC595_I2S_CLK,
		.ws_io_num = IC74HC595_I2S_WS,
		.data_out_num = IC74HC595_I2S_DATA,
		.data_in_num = -1 // Not used
	};

	i2s_driver_install(IC74HC595_I2S_PORT, &i2s_config, 0, NULL);
	i2s_set_pin(IC74HC595_I2S_PORT, &pin_config);

	I2SREG.clkm_conf.clka_en = 0;	   // Use PLL/2 as reference
	I2SREG.clkm_conf.clkm_div_num = 4; // reset value of 4
	I2SREG.clkm_conf.clkm_div_a = 1;   // 0 at reset, what about divide by 0?
	I2SREG.clkm_conf.clkm_div_b = 0;   // 0 at reset

	//
	I2SREG.fifo_conf.tx_fifo_mod = 3; // 32 bits single channel data
	I2SREG.conf_chan.tx_chan_mod = 3; //
	I2SREG.sample_rate_conf.tx_bits_mod = 32;

	I2SREG.conf_single_data = 0;

	// Use normal clock format, (WS is aligned with the last bit)
	I2SREG.conf.tx_msb_shift = 0;
	I2SREG.conf.rx_msb_shift = 0;

	// Disable TX interrupts
	I2SREG.int_ena.out_eof = 0;
	I2SREG.int_ena.out_dscr_err = 0;

#endif

	timer_start(PWM_TIMER_TG, PWM_TIMER_IDX);

	esp32_wifi_bt_init();
	mcu_enable_global_isr();
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	if (!mcu_itp_timer_running)
	{
		/* Timer's counter will initially start from value below.
		   Also, if auto_reload is set, this value will be automatically reload on alarm */
		timer_set_counter_value(ITP_TIMER_TG, ITP_TIMER_IDX, 0x00000000ULL);

		/* Configure the alarm value and the interrupt on alarm. */
		timer_set_alarm_value(ITP_TIMER_TG, ITP_TIMER_IDX, (uint64_t)ticks * prescaller);
		timer_enable_intr(ITP_TIMER_TG, ITP_TIMER_IDX);
		timer_isr_register(ITP_TIMER_TG, ITP_TIMER_IDX, mcu_itp_isr, NULL, 0, NULL);

		timer_start(ITP_TIMER_TG, ITP_TIMER_IDX);
		mcu_itp_timer_running = true;
	}
	else
	{
		mcu_change_itp_isr(ticks, prescaller);
	}
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	if (mcu_itp_timer_running)
	{
		timer_pause(ITP_TIMER_TG, ITP_TIMER_IDX);
		timer_set_alarm_value(ITP_TIMER_TG, ITP_TIMER_IDX, (uint64_t)ticks * prescaller);
		timer_start(ITP_TIMER_TG, ITP_TIMER_IDX);
	}
	else
	{
		mcu_start_itp_isr(ticks, prescaller);
	}
}

void mcu_stop_itp_isr(void)
{
	if (mcu_itp_timer_running)
	{
		// timerAlarmDisable(esp32_step_timer);
		timer_pause(ITP_TIMER_TG, ITP_TIMER_IDX);
		timer_disable_intr(ITP_TIMER_TG, ITP_TIMER_IDX);
		mcu_itp_timer_running = false;
	}
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	mcu_timeout_cb = fp;
	timer_config_t config = {0};
	config.divider = getApbFrequency() / 1000000UL; // 1us per count
	config.counter_dir = TIMER_COUNT_UP;
	config.counter_en = TIMER_PAUSE;
	config.alarm_en = TIMER_ALARM_EN;
	config.auto_reload = true;
	timer_init(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, &config);

	/* Timer's counter will initially start from value below.
	   Also, if auto_reload is set, this value will be automatically reload on alarm */
	timer_set_counter_value(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, 0x00000000ULL);

	/* Configure the alarm value and the interrupt on alarm. */
	timer_set_alarm_value(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, (uint64_t)timeout);
	timer_enable_intr(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX);
	timer_isr_register(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX, mcu_oneshot_isr, NULL, 0, NULL);
}

void mcu_start_timeout()
{
	timer_start(ONESHOT_TIMER_TG, ONESHOT_TIMER_IDX);
}
